test/parallel/single/waynew/simple0b.good
simple0b.chpl:11: error: halt reached - ***Error: single var already defined***
